# freecodecamp_data_analysis_python_projects

./: README.md
Demographic Data Analyzer/: README.md  demographic_data_analyzer.py  pyproject.toml  replit_zip_error_log.txt
Mean Variance Standard Deviation Calculator/: README.md  mean_var_std.py  pyproject.toml  replit_zip_error_log.txt
Medical Data Visualizer/: README.md  medical_data_visualizer.py  pyproject.toml  replit.nix  replit_zip_error_log.txt
Page View Time Series Visualizer/: README.md  pyproject.toml  replit_zip_error_log.txt  time_series_visualizer.py
Sea Level Predictor/: README.md  pyproject.toml  replit_zip_error_log.txt  sea_level_predictor.py
