[tool.poetry]
name = "fcc-mean-var-std"
version = "0.1.0"
description = "FCC Demographic Data Mean Variance Standard Deviation Calculator project for freecodecamp.org's Data Analysis with Python Certification"
authors = ["Josh Klein <joshklein.dev@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
numpy = "^1.18"

[tool.poetry.dev-dependencies]
python-lsp-server = {extras = ["yapf", "rope", "pyflakes"], version = "^1.5.0"}
toml = "^0.10.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
